--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,15 +1,17 @@
 <ion-content class="bg-black" style="display: ">
-   
+    <ion-button (click)="openModal('1')">Modal1</ion-button>
+    <ion-button (click)="openModal('2')">Modal2</ion-button>
+    <ion-button (click)="openModal('3')">Modal3</ion-button>
     <ion-card class="welcome-card">    
       <ion-grid>
           <ion-row>
-             <ion-col size="7">  
+             <ion-col size="7" align-self-center>  
               <div>
                  <div class="icon-bell icon"></div>
                  <div class="icon-podium icon"></div>
               </div>
             </ion-col>
-            <ion-col size="5" class="ion-text-right">  
+            <ion-col size="5" class="ion-text-right" align-self-center>  
                <div >
                  <div class="icon-football icon"></div>
                  <ion-label color="light" class="ion-2x ion-text-justify">
@@ -27,9 +29,9 @@
                 <ion-button  class="btn-font-size" color="danger" size="small">Live</ion-button>
               </div>
             </ion-col>
-            <ion-col size="9" float-right class="ion-text-right ion-padding-end">     
+            <ion-col size="9" float-right class="ion-text-right ion-padding-end" align-self-center>     
                 <div class="">         
-                  <ion-label class="ion-text-right ion-1x ion-padding-end">10.00</ion-label>              
+                  <ion-label class="ion-text-right ion-1x ion-padding-end text-dark">10.00</ion-label>              
                 </div>
             </ion-col>
           </ion-row>                              
@@ -41,7 +43,7 @@
            </ion-col>
 
           <ion-col size="6">
-            <div class="ion-text-center text-white">
+            <div class="ion-text-center text-white text-white-font">
               <h3>3 - 1 </h3>
           </div>
           </ion-col>
@@ -55,7 +57,7 @@
     <div class="page3">
       <ion-grid>
         <ion-row>
-          <ion-col>
+          <ion-col justify-content-center>
             <div class="powerplay-banner"></div>
           </ion-col>
         </ion-row>  
@@ -65,7 +67,7 @@
         <ion-row>
           <ion-col size="1"></ion-col>
           <ion-col size="10" class="justify-content-center">
-            <div class="instruct text-center text-white">
+            <div class="instruct text-center text-white text-white-font">
               Use your <span class="icon-energy energy"></span>               powerplay tickets anytim in the game to predict outcomes in the next 60 seconds of the game
             </div>
           </ion-col>
@@ -102,24 +104,24 @@
           </ion-row>
            <ion-row class="border hide">
              <ion-col>
-               <div class="icon-tabs-tab"></div>
-               <div class="score ion-text-center text-green"></div>
+               <div class="icon-tab-loader icon-tabs-tab"></div>
+               <div class="score ion-text-center text-green text-green-font"></div>
              </ion-col> 
              <ion-col>
-               <div class="icon-tabs-tab-lost"></div>
-               <div class="score ion-text-center text-red">LOST</div>
+               <div class=" icon-tabs-tab-lost"></div>
+               <div class="score ion-text-center text-red text-red-font">LOST</div>
              </ion-col> 
              <ion-col>
-               <div class="icon-tabs-tab-red-border"></div>
-               <div class="score ion-text-center text-red"></div>
+               <div class=" icon-tabs-tab-red-border"></div>
+               <div class="score ion-text-center text-red text-red-font"></div>
              </ion-col> 
              <ion-col>
-               <div class="icon-tabs-tab-lost"></div>
-               <div class="score ion-text-center text-red">+ 200</div>
+               <div class=" icon-tabs-tab-lost"></div>
+               <div class="score ion-text-center text-red text-red-font">+ 200</div>
              </ion-col> 
              <ion-col>
-               <div class="icon-tabs-tab-win"></div>
-               <div class="score ion-text-center text-green">+ 200</div>
+               <div class=" icon-tabs-tab-win"></div>
+               <div class="score ion-text-center text-green text-green-font">+ 200</div>
              </ion-col> 
            </ion-row>
 
@@ -130,16 +132,16 @@
                     <div class="q-title">Prediction 1 </div>
                     <div class="q-quest">Will BOU tally the scoreboard by scoring a goal in first half?</div>
 
-                   <ion-button class="ion-margin-top btn-font-size button-width btn-wrong-red" color="gray" size="large"><span class="text-red">Yes</span>Yes</ion-button><br/>
-                    <ion-button class="ion-margin-top btn-font-size button-width btn-success-green" color="gray" size="large"><span class="text-green">No</span></ion-button>
-                     <ion-button class="ion-margin-top btn-font-size button-width btn-dark" color="dark" size="large"><span class="text-dark">No</span></ion-button>
+                   <ion-button class="ion-margin-top btn-font-size button-width btn-wrong-red" color="gray" size="large"><span class="text-red text-red-font">Yes</span>Yes</ion-button><br/>
+                    <ion-button class="ion-margin-top btn-font-size button-width btn-success-green" color="gray" size="large"><span class="text-green text-green-font">No</span></ion-button>
+                     <ion-button class="ion-margin-top btn-font-size button-width btn-dark" color="dark" size="large"><span class="text-white text-white-font">No</span></ion-button>
                   </div> 
               </ion-col>
 
               <ion-col size="3">
                <div class="">
-                  <div class="score-container text-center">
-                    <div class="point">60  Sec</div>
+                  <div class="score-container text-center">                   
+                    <div class="point">{{timeLeft}} Sec</div>
                   </div>
                 </div> 
               </ion-col>
@@ -148,7 +150,7 @@
 
            <ion-row class="border tab-row">
              <ion-col class="justify-content-center">
-               <div class="icon-energy selected"></div>               
+               <div class="icon-tab-energy-loader icon-energy selected"></div>
              </ion-col> 
              <ion-col class="justify-content-center">
                <div class="icon-energy"></div>              
@@ -168,7 +170,7 @@
          <ion-grid class="">
           <ion-row class="justify-content-center">
             <ion-col>
-              <div class="text-white">What below event is going to happen in next 2 minutes?</div></ion-col>
+              <h5 class="text-white ion-text-center">What below event is going to happen <br/>in next 2 minutes?</h5></ion-col>
           </ion-row>
           <ion-row>
               <ion-col size="6">          
@@ -181,8 +183,8 @@
               <ion-col size="6">
                   <div class="box ion-text-center">
                     <div class="ion-padding-bottom ion-padding-top f-w-b">CORNER KICK</div>  
-                    <div class="right-p text-red">Right prediction +300 pts</div>
-                    <div class="wrong-p text-green">Wrong prediction -20 pts</div>                 
+                    <div class="right-p text-red text-red-font">Right prediction +300 pts</div>
+                    <div class="wrong-p text-green text-green-font">Wrong prediction -20 pts</div>                 
                   </div> 
               </ion-col>
           </ion-row>
@@ -191,16 +193,16 @@
               <ion-col size="6">          
                   <div class="box ion-text-center">
                     <div class="ion-padding-bottom ion-padding-top f-w-b">FOUL</div>  
-                    <div class="right-p text-red">Right prediction +300 pts</div>
-                    <div class="wrong-p text-green">Wrong prediction -20 pts</div>                 
+                    <div class="right-p text-red text-red-font">Right prediction +300 pts</div>
+                    <div class="wrong-p text-green text-green-font">Wrong prediction -20 pts</div>                 
                   </div> 
               </ion-col>
 
               <ion-col size="6">
                   <div class="box ion-text-center">
                     <div class="ion-padding-bottom ion-padding-top f-w-b">NONE OF THESE</div>  
-                    <div class="right-p text-red">Right prediction +300 pts</div>
-                    <div class="wrong-p text-green">Wrong prediction -20 pts</div>                 
+                    <div class="right-p text-red text-red-font">Right prediction +300 pts</div>
+                    <div class="wrong-p text-green text-green-font">Wrong prediction -20 pts</div>                 
                   </div> 
               </ion-col>
           </ion-row>
@@ -208,7 +210,7 @@
 
          <ion-grid class="border ion-margin-top page4">
           <ion-row>
-              <ion-col text-center class="text-white  justify-content-center text-center">
+              <ion-col text-center class="text-white text-white-font  justify-content-center text-center">
                 <h5>CONGRATULATIONS!</h5>
                   <div class="text-h6 ">
                     Your instincts have made it BIG!</div>  
@@ -223,11 +225,20 @@
 
         <ion-grid class="border ion-margin-top page4">
           <ion-row>
-              <ion-col text-center class="text-white  justify-content-center text-center">
+              <ion-col text-center class="text-white text-white-font  justify-content-center text-center">
+                <div class="text-h6-light">If a ‘Goal’ happens in next 60 seconds you will <span class="text-red">get 300 points</span>, if not you’ll <span class="text-green">loose 20 points!</span></div>
+                <div class="timer"></div>                 
+            </ion-col>
+          </ion-row>
+        </ion-grid>  
+
+        <ion-grid class="border ion-margin-top page4">
+          <ion-row>
+              <ion-col text-center class="text-white text-white-font  justify-content-center text-center">
                   <div class="text-h6 ">
                     OOPS! <br/>
                     Better luck next time</div>  
-                  <div class="ion-padding banner ion-margin-top ">
+                  <div class="ion-padding ion-margin-top ">
                     <div class="text-h6">You have lost
                       <br/><h3 class="text-red-size">- 20</h3>
                       points</div>
@@ -238,10 +249,10 @@
 
         <ion-grid>
           <ion-row>
-              <ion-col size="7" class="text-white ">
+              <ion-col size="7" class="text-white text-white-font ">
                 <div>5 predictions to go to unlock </div> 
               </ion-col>
-              <ion-col size="5"> 
+              <ion-col size="5" > 
                 <ion-button class="ion-margin-start btn-powerplay" color="danger" size="small">   
                   <ion-icon slot="start" ios="ios-flash" md="md-flash"></ion-icon>
                   Powerplay</ion-button>
@@ -261,7 +272,7 @@
 
      <ion-grid class="bg-dark page2 bottom bottom-padding">
           <ion-row>
-              <ion-col text-center class="text-white  justify-content-center text-center">
+              <ion-col text-center class="text-white text-white-font  justify-content-center text-center">
                   <div class="text-h6">We will be back soon when the play resumes after</div>
                   <h5 class="text-center">HALF TIME</h5>
             </ion-col>
@@ -277,7 +288,7 @@
       <ion-grid>
            <ion-row>
               <ion-col size="6">
-               <div class="text-white"><ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon> 
+               <div class="text-white text-white-font"><ion-icon ios="ios-arrow-back" md="md-arrow-back"></ion-icon> 
                MY WINNINGS (6)</div>
               </ion-col>
            </ion-row>
