--- a/src/app/setting/setting.component.html
+++ b/src/app/setting/setting.component.html
@@ -8,7 +8,7 @@
   <ion-content padding class="bg-dark pop1" color="black" *ngIf="modelId==1">
     <ion-grid>
       <ion-row>
-        <ion-col text-center> {{this.modelId}}
+        <ion-col text-center> 
           <div class="better-luck-next-tim"></div>
         
         </ion-col>
@@ -28,12 +28,12 @@
   <ion-content padding class="bg-dark pop2" color="black" *ngIf="modelId==2">
     <ion-grid>
       <ion-row>
-        <ion-col text-center>{{this.modelId}}
+        <ion-col text-center>
           <div class="congratulations"></div>
         </ion-col>
       </ion-row>
       <ion-row justify-content-center text-center>
-        <h1 class="msg" padding margin text-center>{{this.modelId}}You have won a <br/>
+        <h1 class="msg" padding margin text-center>You have won a <br/>
           <span class="text-red">BookMyShow Gift <br/> Voucher of Rs. 500!</span>
         </h1>
       </ion-row>
