--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,9 @@
 <ion-content class="bg-black" style="display: ">
-    <ion-button (click)="openModal('1')">Modal1</ion-button>
-    <ion-button (click)="openModal('2')">Modal2</ion-button>
-    <ion-button (click)="openModal('3')">Modal3</ion-button>
+    <div class="temp">
+      <ion-button (click)="openModal('1')">Modal1</ion-button>
+      <ion-button (click)="openModal('2')">Modal2</ion-button>
+      <ion-button (click)="openModal('3')">Modal3</ion-button>
+    </div>
     <ion-card class="welcome-card">    
       <ion-grid>
           <ion-row>
