--- a/src/global.scss
+++ b/src/global.scss
@@ -9,3 +9,11 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+
+ .modal-wrapper{
+        background: transparent !important;
+}
+ .modal-wrapper, .inner-scroll{
+    background: transparent !important;
+  }
